chore: amazon ads

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,3 +24,16 @@
 <audio controls autoplay loop>
   <source src="assets/happybirthday_02.mp3" type="audio/mp3">
 </audio>
+
+<div class="row">
+  <div class="col-12">
+    Unterstütze Jenny bei ihrem Studium und kaufe die folgenden Produkte
+  </div>
+  <div class="col">
+    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-eu.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=DE&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=stefankoerner-21&language=de_DE&marketplace=amazon&region=DE&placement=B06XGMG6V5&asins=B06XGMG6V5&linkId=8395a88dda7849ed2b4218a5e94e6114&show_border=true&link_opens_in_new_window=true"></iframe>
+    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-eu.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=DE&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=stefankoerner-21&language=de_DE&marketplace=amazon&region=DE&placement=B001ECBSVS&asins=B001ECBSVS&linkId=ad4e4e3a859b588a06b93ffac0712dc0&show_border=true&link_opens_in_new_window=true"></iframe>
+    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-eu.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=DE&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=stefankoerner-21&language=de_DE&marketplace=amazon&region=DE&placement=B074RJDVGC&asins=B074RJDVGC&linkId=a6ddc180cd8eba4c5d7192dfbdab0283&show_border=true&link_opens_in_new_window=true"></iframe>
+    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-eu.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=DE&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=stefankoerner-21&language=de_DE&marketplace=amazon&region=DE&placement=B07VZVGSYB&asins=B07VZVGSYB&linkId=6f8572ea4064aa3ab2f3f992a227b31f&show_border=true&link_opens_in_new_window=true"></iframe>
+  </div>
+</div>
+
